plugins/formal-verification/testData/diagnostics/good_always_validate/nullability.kt
fun <!VIPER_TEXT!>return_null<!>(): Int? = null
